# rs-queue-processor

./: .gitignore  Cargo.toml  README.md
examples/: load.rs  simple.rs
processor/: Cargo.toml
processor/src/: config.rs  errors.rs  lib.rs  processor.rs  sqs.rs  work.rs
processor/tests/: processor_test.rs
sample/: Cargo.toml
sample/src/: main.rs
scripts/: create-queue-local.sh  local-start.sh  populate-message-local.sh  start-elasticmq.sh
src/: cli.rs  config.rs  errors.rs  lib.rs  main.rs  model.rs  processor.rs  sqs.rs  work.rs
tests/: processor_test.rs
tests/processor_util/: mod.rs
