[package]
name = "rs-queue-processor"
version = "0.2.1"
authors = ["Jack Wright <jack.wright@nike.com>"]
edition = "2018"
description = """
A library to process messages from Amazon AWS SQS 
"""
categories = ["asynchronous", "network-programming"]
keywords = ["async", "non-blocking", "futures", "sqs"]

[dependencies]
tokio = {version = "0.1", features = ["async-await-preview"]}
tokio-async-await = "0.1"
tokio-process = "0.2.3"
rusoto_core = "0.36"
rusoto_sqs = "0.36"
rusoto_credential = "0.15"
futures = "0.1"
log = "0.4"
env_logger = "0.6"
clap = "2.32"

[dev-dependencies]
testcontainers = { git = "https://github.com/testcontainers/testcontainers-rs.git" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"