[package]
name = "rs-queue-processor"
version = "0.2.1"
authors = ["Jack Wright <jack.wright@nike.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/ayax79/rs-queue-processor"
description = """
A library to process messages from Amazon AWS SQS 
"""
categories = ["asynchronous", "network-programming"]
keywords = ["async", "non-blocking", "futures", "sqs"]

[dependencies]
tokio = { version = "^0.2", features = ["time", "stream"] }
# tokio = {version = "0.1", features = ["async-await-preview"]}
# tokio-async-await = "0.1"
#tokio-process = "0.2.3"
#tokio-executor = "0.1"
futures-preview = { version = "0.3.0-alpha.17", features = ["compat"] }
rusoto_core = { version = "^0.41", default_features = false, features = ["rustls"] }
rusoto_sqs = { version = "^0.41", default_features = false, features = ["rustls"] }
rusoto_credential = "^0.41"
# futures = "^0.1"
log = "^0.4" 
env_logger = "^0.7"
clap = "^2.32"
futures-util = "^0.2"
futures-core = "^0.3"

[dev-dependencies]
testcontainers = { git = "https://github.com/testcontainers/testcontainers-rs.git" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
uuid = { version = "0.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
