[package]
name = "rs-queue-processor-sample-app"
version = "0.1.0"
authors = ["Jack Wright <jack.wright@nike.com>"]
edition = "2018"

[dependencies]
tokio = { version = "0.1", features = ["async-await-preview"] }
tokio-process = "0.2.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rs_queue_processor = {path = "../processor"}
log = "0.4"
env_logger = "0.6"
futures = "0.1"
rusoto_sqs = "0.36"